# win-rmdir-fast

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  package.json
.github/workflows/: release.yml
bench/: benchmark.ps1  benchmark.sh
src/: main.rs  worker.rs
tests/: edge_cases.rs  integration_tests.rs
